renamed app.js to server.js

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "testingytdl",
+  "name": "apolloapi",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "server.js",
   "license": "MIT",
   "dependencies": {
     "express": "^4.16.2",
