--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
 	"main": "app.js",
 	"license": "GPL-3.0",
 	"scripts": {
-		"start": "node app.js"
+		"start": "node app.js",
+		"dev": "nodemon app.js"
 	},
 	"dependencies": {
 		"express": "^4.16.2",
 		"youtube-api-v3-search": "^1.0.2",
 		"ytdl-core": "^0.20.2"
+	},
+	"devDependencies": {
+		"nodemon": "^1.17.4"
 	}
 }
